# saekawa

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  release.ps1  update.json
res/: saekawa.toml
src/: configuration.rs  consts.rs  handlers.rs  helpers.rs  icf.rs  lib.rs  log.rs  logging.rs  saekawa.rs  score_import.rs  sigscan.rs
src/config/: defaults.rs  migrate.rs  mod.rs
src/helpers/: chuni_encoding.rs  crypto.rs  endpoint.rs  hinternet.rs  io.rs  mod.rs  net.rs  winapi_ext.rs
src/types/: game.rs  mod.rs  tachi.rs
src/types/chuni/: mod.rs  music.rs  upsert.rs
src/types/tachi/: api.rs  api_returns.rs  documents.rs  mod.rs
src/types/tachi/batch_manual/: class.rs  meta.rs  mod.rs  score.rs
src/updater/: external.rs  mod.rs
