[package]
name = "saekawa"
version = "0.2.0"
authors = ["beerpsi <lacvtg.a1.2023@gmail.com>"]
edition = "2021"
license = "0BSD"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
aes = "0.8.3"
anyhow = "1.0.75"
cbc = "0.1.2"
chrono = "0.4.31"
confy = "0.5.1"
env_logger = "0.10.1"
faster-hex = "0.8.1"
flate2 = "1.0.28"
lazy_static = "1.4.0"
log = "0.4.20"
num_enum = "0.7.1"
pbkdf2 = "0.12.2"
retour = { version = "0.3.1", features = ["static-detour"] }
serde = { version = "1.0.192", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.108"
sha1 = "0.10.6"
ureq = { version = "2.8.0", features = ["json"] }
url = "2.4.1"
widestring = "1.0.2"
winapi = { version = "0.3.9", features = ["winhttp", "minwindef", "debugapi"] }
